# libfibre

./: .gitignore  .gitmodules  GNUmakefile  Makefile.am
include/: fibre.h
makecheck/: Makefile.am  b.c
makecheck/subdir1/: Makefile.am
makecheck/subdir2/: Makefile.am
src/: Makefile.am  arch-setjmp.c  arch-setjmp.h  arch-ucontext.c  arch-ucontext.h  arch-x86.c  arch-x86.h  fibre.c  private.h  sel_origin.c  sel_scheduler.c
targets/: common-default.mk  debug-gcc.mk  default-gcc.mk
tests/: Makefile.am  bench.c  test_fibre.c
tests/bench/: Makefile.am  bench.c  bench.h  bench_sm.c
